# adaptive-vap-space

./: .gitignore  README.md  pyproject.toml
configs/: datastore.yaml  kaggle.yaml  local_debug.yaml  smoke20.yaml
docs/: AI_COLLABORATION_PROTOCOL.md  BASELINE_AUDIT_DECISIONS.md  DATASET_SCOPE.md  DATASTORE.md  DECISIONS.md  EVALUATION.md  EVENT_EXTRACTION_AUDIT.md  KAGGLE.md  LOCAL_SETUP.md  PROTOTYPING.md
scripts/: 01_check_env.py  10_build_datastore.py  20_run_vap.py  30_extract_events.py  40_eval_calibrated.py  50_eda_dataset.py  51_eda_vap_errors.py  52_eda_event_errors.py  70_cleanup_storage.py
src/adaptive_vap_space/: __init__.py  audio.py  config.py  datastore.py  download.py  eda.py  event_extraction.py  events.py  filtering.py  ids.py  metrics.py  paths.py  reports.py  residuals.py  seamless.py  stereo.py  vad.py  vap_outputs.py  vap_runner.py  vap_scores.py
tests/: test_filtering.py  test_ids.py  test_metrics.py  test_paths.py  test_stereo.py  test_vad.py  test_vap_outputs.py
